# kwin-effects-yet-another-magic-lamp

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Model.cc  Model.h  YetAnotherMagicLampEffect.cc  YetAnotherMagicLampEffect.h  metadata.json
src/kcm/: CMakeLists.txt  YetAnotherMagicLampEffectKCM.cc  YetAnotherMagicLampEffectKCM.h  metadata.json  plugin.cc
